query/query_svc+deployment+ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: query-svc
spec:
  ports:
  - port: 80
  selector:
    app.kubernetes.io/name: query-back-end

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-back-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: query-back-end
  template:
    metadata:
      labels:
        app.kubernetes.io/name: query-back-end
    spec:
      containers:
      - name: query-back-end
        image: aksh77/query:latest
        imagePullPolicy: Always 
        command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
        ports:
        - containerPort: 80
