query/query_svc+deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: query-svc
spec:
  ports:
  - port: 8000
  selector:
    app.kubernetes.io/name: query-back-end

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-back-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: query-back-end
  template:
    metadata:
      labels:
        app.kubernetes.io/name: query-back-end
    spec:
      containers:
      - name: query-back-end
        image: eu.gcr.io/prj-ext-prod-faang-gcp-dr/dcc-query-api/query-api-embassy-cloud:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 8000
