query/query_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: query-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: “true”
spec:
  tls:
  - hosts:
    - api.faang.org
    secretName: tls-secret
  rules:
  - host: api.faang.org
    http:
      paths:
      - backend:
          serviceName: query-svc
          servicePort: 80
        path: /query(/|$)(.*)
        pathType: ImplementationSpecific
